--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,349 +3,418 @@ html {
   background-repeat: no-repeat;
   height: 2970px;
 
-  //  background-color: lawngreen;
 }
 
 body {
+
   width: 980px;
   margin: 0 auto;
   min-height: 500px;
+  //margin-top: 250px; //new
+  //background-color: white; //new
+  //height: 2000px; //new
 
- header {
-   div#logo {
-     position: absolute;
-     left: 140px;
-     top: 20px;
-   }
+  header {
+    div#logo {
+      position: absolute;
+      left: 140px;
+      top: 20px;
+    }
 
-   div#menu{
-     background-image: url("images/zoekmenu.png");
-     background-repeat: no-repeat;
-     width: 412px;
-     position: absolute;
-     left:328px;
-     top:100px;
+    div#menu {
+      background-image: url("images/zoekmenu.png");
+      background-repeat: no-repeat;
+      width: 412px;
+      position: absolute;
+      left: 328px;
+      top: 100px;
 
-     ul{
-       li{
-         a.radio1link {
-           display: inline-block;
-           width: 127px;
-           height: 37px;
-           position: absolute;
-           top: 0px;
-           left: 0px;
-         }
+      ul {
+        li {
+          a.radio1link {
+            display: inline-block;
+            width: 127px;
+            height: 37px;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+          }
 
-         input#searchbox {
-           position: absolute;
-           top: 8px;
-           left: 262px;
-           width: 110px;
-           height: 20px;
-           padding-left: 2px;
-           padding-right: 2px;
-           border: none;
-           background-color: transparent;
-         }
+          input#searchbox {
+            position: absolute;
+            top: 8px;
+            left: 262px;
+            width: 110px;
+            height: 20px;
+            padding-left: 2px;
+            padding-right: 2px;
+            border: none;
+            background-color: transparent;
+          }
 
-         input#searchbutton {
-           position: absolute;
-           top: 7px;
-           left: 376px;
-           width: 25px;
-           height: 22px;
-           border: none;
-           background-color: transparent;
-         }
-         display: inline-block;
-       }
-     }
+          input#searchbutton {
+            position: absolute;
+            top: 7px;
+            left: 376px;
+            width: 25px;
+            height: 22px;
+            border: none;
+            background-color: transparent;
+          }
+          display: inline-block;
+        }
+      }
+    }
 
-   }
+    div#subnav {
+      position: absolute;
+      left: 760px;
+      top: 0;
+      ul {
+        list-style-type: none;
+        li {
 
-   div#subnav{
-     position: absolute;
-     left:760px;
-     top:0;
-     ul{
-       list-style-type: none;
-       li{
+          float: left;
+          display: inline-block;
+          font-size: 10px;
+          padding: 0px 5px 0px 5px;
+          a {
+            color: #ccc;
+            text-decoration: none;
+            font-family: sans-serif;
+          }
+          &:first-child {
+            border-left: none;
+          }
+        }
+      }
+    }
 
-         float: left;
-         display: inline-block;
-         font-size: 10px;
-         padding: 0px 5px 0px 5px;
-         a {
-           color: #ccc;
-           text-decoration: none;
-           font-family: sans-serif;
-         }
-         &:first-child {
-          border-left: none;
-         }
-       }
-     }
-   }
+    div#navtourtop100 {
+      position: absolute;
+      left: 324px;
+      top: 40px;
+    }
 
-   div#navtourtop100{
-     position: absolute;
-     left: 324px;
-     top: 40px;
-   }
+    div#changefontsize {
+      position: absolute;
+      left: 1100px;
+      top: 50px;
+    }
 
-   div#changefontsize{
-     position: absolute;
-     left:1100px;
-     top:50px;
-   }
+    div#luistermee {
+      background-image: url('images/luisterlive.png');
+      background-repeat: no-repeat;
+      position: absolute;
+      left: 1030px;
+      top: 98px;
+      width: 130px;
+      height: 40px;
+    }
 
-   div#luistermee{
-     background-image: url('images/luisterlive.png');
-     background-repeat: no-repeat;
-     position: absolute;
-     left:1030px;
-     top:98px;
-     width: 130px;
-     height: 40px;
-   }
+    div#fietser {
+      position: absolute;
+      left: 850px;
+      top: 60px;
+      z-index: 10;
+    }
 
-   div#fietser{
-     position: absolute;
-     left: 850px;
-     top: 70px;
-     z-index: 10;
-   }
+    div#datum {
 
-   div#datum {
-     border-top-left-radius: 10px;
-     border-top-right-radius: 10px;
-     z-index: 100;
-     background-color: white;
-     background-image: url('images/datebar.png');
-     background-repeat: no-repeat;
-     width: 972px;
-     position: absolute;
-     //left: 140px;
-     padding: 5px 40px 5px 10px;
-     height: 30px;
-    // top: 238px; dit moet het wel zijn
-     top: 210px;
-     h3 {
-       margin: 0px;
-       margin-left: 30px;
-       margin-right: 5px;
-       display: inline-block;
-       float: left;
-       font-family: 'Tahoma', sans-serif;
-       text-transform: uppercase;
-     }
-     ul#dagen {
-       margin: 0px;
-       list-style-type: none;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      z-index: 100;
+      background-color: white;
+      background-image: url('images/datebar.png');
+      background-repeat: no-repeat;
+      //width: 972px;
+      width: 972px;
+      position: absolute;
+      //left: 140px;
+      padding: 5px 40px 5px 10px;
+      height: 30px;
+      // top: 238px; dit moet het wel zijn
+      top: 210px;
+      h3 {
+        margin: 0px;
+        margin-left: 30px;
+        margin-right: 5px;
+        display: inline-block;
+        float: left;
+        font-family: 'Tahoma', sans-serif;
+        text-transform: uppercase;
+      }
+      a{
+        text-decoration: none;
+        color: black;
+      }
+      ul#dagen {
+        margin: 0px;
+        list-style-type: none;
 
-       li {
-         width: 36px;
-         height: 30px;
-         border-right: 1px solid rgba(100, 100, 100, 0.2);
-         text-align: center;
-         float: left;
-         font-family: 'Tahoma', sans-serif;
-         display: inline-block;
-         margin-top: -3px;
-         padding-top: 5px;
+        li {
+          width: 36px;
+          height: 30px;
+          border-right: 1px solid rgba(100, 100, 100, 0.2);
+          text-align: center;
+          float: left;
+          font-family: 'Tahoma', sans-serif;
+          display: inline-block;
+          margin-top: -3px;
+          padding-top: 5px;
 
-         &.past {
-           background-color: grey;
-           background: -webkit-linear-gradient(top, #1e5799 0%,#333333 0%,#ffffff 83%,#ffffff 100%);
-           background: linear-gradient(to bottom, #1e5799 0%,#333333 0%,#ffffff 83%,#ffffff 100%);
-           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#ffffff',GradientType=0 );
-         }
+          &.past {
+            background-color: grey;
+            background: -webkit-linear-gradient(top, #1e5799 0%, #333333 0%, #ffffff 83%, #ffffff 100%);
+            background: linear-gradient(to bottom, #1e5799 0%, #333333 0%, #ffffff 83%, #ffffff 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e5799', endColorstr='#ffffff', GradientType=0);
 
-         &.today {
-           background-color: white;
-           -webkit-box-shadow: inset 0px 10px 10px 0px rgba(0,0,0,0.75);
-           -moz-box-shadow: inset 0px 10px 10px 0px rgba(0,0,0,0.75);
-           box-shadow: inset 0px 7px 5px -2px rgba(0,0,0,0.65);
-         }
+            &:hover, &.selected {
+              border: 2px solid red;
+              width: 35px;
+              padding-left: 1px;
+              margin-top: -5px;
+              margin-left: -3px;
+            }
+          }
 
-         &.future {
+          &.today {
+            background-color: white;
+            -webkit-box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 0, 0.75);
+            box-shadow: inset 0px 7px 5px -2px rgba(0, 0, 0, 0.65);
+            &:hover, &.selected {
+              border: 2px solid red;
+              width: 35px;
+              padding-left: 1px;
+              margin-top: -5px;
+              margin-left: -3px;
+            }
 
-         }
+            &.future {
 
-         &.selected {
-           border: 2px solid red;
-         }
+              &:hover {
+                border: none;
+              }
+            }
+          }
+        }
+      }
+    }
 
-         &:hover {
-           border: 2px solid red;
-           width: 35px;
-           padding-left: 1px;
-           margin-top: -5px;
-           margin-left: -3px;
+    /////////////////////////////////// end header / begin body //////////////////////////////////////
 
-         }
-       }
-     }
-   }
- }
+    section {
+      z-index: 99;
+      min-height: 200px;
+    }
+  }
+    section#home{
+      position: absolute;
+      display: block;
+      top: 250px;
+      width: 1022px;
+      background: white;
+      height: 2900px;
+      h1 {
+        border-bottom: dotted 2px;
+        color: red;
+        margin: 20px;
+      }
+    }
 
-  /////////////////////////////////// end header / begin body //////////////////////////////////////
 
-section {
-  z-index: 99;
-  min-height: 200px;
-}
+  .entry {
+    display: inline-block;
+    margin-left: 20px;
+    overflow: hidden;
+    font-family: 'Tahoma', sans-serif;
+    margin-bottom: 30px;
+    div {
+      display: inline-block;
+    }
+    //width: 550px;
+    width: 650px;
 
-  section#home {
+
+    .songvid {
+      //position: absolute;
+      float: left;
+      left: 30px;
+      width: 210px;
+      height: 140px;
+
+    }
+
+    .songheader {
+      //position: absolute;
+      float: right;
+      left: 250px;
+      //width: 330px;
+      width: 420px;
+      line-height: 30px;
+
+      .songnr {
+        text-align: center;
+        background-color: red;
+        color: white;
+        width: 30px;
+        height: 30px;
+      }
+
+      .songtitle {
+        font-size: 120%;
+      }
+
+    }
+
+    .songinfo {
+      //position: absolute;
+      margin-top: 10px;
+      overflow: hidden;
+      float: right;
+      left: 250px;
+      top: 110px;
+      //width: 330px;
+      width: 420px;
+      height: 75px;
+    }
+    .songfooter {
+      //position: absolute;
+      float: right;
+      left: 250px;
+      top: 188px;
+      //width: 330px;
+      width: 420px;
+      margin-top: 10px;
+    }
+    .songlinks {
+      color: deepskyblue;
+    }
+    .songshare {
+    margin-left: 180px;
+    }
+  }
+
+  /////////////////////////////////////// footer ////////////////////////////////////////////////
+
+  footer {
+    z-index: 100;
+    position: absolute;
+    top: 3270px;
+    left: 0px;
+
+    width: 100%;
+    height: 50px;
+    background-color: grey;
+    text-decoration: none;
+    color: white;
+    float: right;
+
+    ul {
+      width: 600px;
+      margin: 0 auto;
+      list-style-type: none;
+      li {
+        display: inline-block;
+        //float: left;
+        line-height: 50px;
+        width: 60px;
+        padding: 5px;
+      }
+    }
+  }
+
+  .clearfix:after {
+    content: " "; /* Older browser do not support empty content */
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+  }
+
+  ///////////////////////////////////// rechts menu /////////////////////////////////////////
+  div#rmenu {
+    z-index: 100;
+    position: absolute;
+    left: 895px;
+    top: 320px;
+
+    width: 230px;
+    height: 743px;
+  }
+
+  div#asidetop100 {
+    top: 200px;
+  }
+
+  div#asideprijsvraag {
+    bottom: 200px;
+  }
+  //////////////////////////////////songdetail////////////////////////////
+  section#songdetail {
     position: absolute;
     display: block;
     top: 250px;
     width: 1022px;
     background: white;
     height: 2900px;
-    h1{
+    h1 {
       border-bottom: dotted 2px;
       color: red;
       margin: 20px;
     }
   }
-}
 
-.entry{
-  font-family: 'Tahoma', sans-serif;
-  div {
-    border: 1px solid red;
-    display: inline-block;
+  //////////////////////////////////testimonials//////////////////////////
+
+  //////////////////////////////////prijsvraag////////////////////////////
+
+  div.doemeeprijsvraag {
+    border: red solid 2px;
   }
-  width: 550px;
 
-  .songvid {
+  div.prvraagpic {
     position: absolute;
     left: 30px;
     width: 210px;
     height: 140px;
-
+    border: red solid 2px;
   }
 
-  .songheader {
+  div.prvraagsongheader {
     position: absolute;
     left: 250px;
     width: 391px;
     line-height: 30px;
-
-    .songnr {
-      text-align: center;
-      background-color: red;
-      color: white;
-      width: 30px;
-      height: 30px;
-    }
-
-    .songtitle {
-      font-size: 120%;
-    }
-
-
+    border: red solid 2px;
   }
 
-  .songinfo{
-    position: absolute;
-    left: 250px;
-    top: 110px;
-    width: 391px;
-    height: 75px;
+  div.prvraagsongnr {
+    text-align: center;
+    background-color: red;
+    color: white;
+    width: 30px;
+    height: 30px;
+    border: red solid 2px;
   }
-  .songfooter{
-    position: absolute;
-    left: 250px;
-    top: 188px;
-    width: 391px;
+
+  div.prvraagsongtitle {
+    border: red solid 2px;
   }
-}
 
-/////////////////////////////////////// footer ////////////////////////////////////////////////
-
-footer {
-  z-index: 100;
-position: absolute;
-  top: 3270px;
-  left: 0px;
-
-  width: 100%;
-  height: 50px;
-  background-color: grey;
-  text-decoration: none;
-  color: white;
-  float: right;
-
-  ul {
-    width: 600px;
-    margin: 0 auto;
-    list-style-type: none;
-    li {
-      display: inline-block;
-      //float: left;
-      line-height: 50px;
-      width: 60px;
-      padding: 5px;
-    }
+  div.prvraagsonginfo {
+    border: red solid 2px;
   }
-}
 
-.clearfix:after {
-  content: " "; /* Older browser do not support empty content */
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both;
-}
+  div.prvraagvraag {
+    border: red solid 2px;
+  }
 
-///////////////////////////////////// rechts menu /////////////////////////////////////////
-div#rmenu {
-  z-index: 100;
-  position: absolute;
-  left: 895px;
-  top: 320px;
+  //////////////////////////////////top100////////////////////////////////
 
-  width: 230px;
-  height: 743px;
-}
-
-div#asidetop100{
-  top: 200px;
-}
-
-div#asideprijsvraag{
-  bottom: 200px;
-}
-//////////////////////////////////songdetail////////////////////////////
-
-
-
-
-
-
-//////////////////////////////////testimonials//////////////////////////
-
-
-
-
-
-
-//////////////////////////////////prijsvraag////////////////////////////
-
-
-
-
-
-
-//////////////////////////////////top100////////////////////////////////
-
-
-
-
-///test///
-div#test{
-  background-color: lawngreen;
+  ///test///
+  div#test {
+    background-color: lawngreen;
+  }
 }
